manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: axion-telemetry-query-service
  namespace: axion-app
spec:
  type: ClusterIP
  selector:
    app: axion-telemetry-query-service
  ports:
    - port: 80
      targetPort: 8000
