manifests/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: axion-telemetry-query-service-ingress
  namespace: axion-app
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: axion-telemetry-query-service.jaydeep.shop
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: axion-telemetry-query-service
            port:
              number: 80
